--- a/Backend/bdss/pom.xml
+++ b/Backend/bdss/pom.xml
@@ -65,6 +65,16 @@
 			<version>1.5.5.Final</version> <!-- Replace with the latest version if needed -->
 			<scope>provided</scope>
 		</dependency>
+
+		<dependency>
+			<groupId>org.springframework.security</groupId>
+			<artifactId>spring-security-crypto</artifactId>
+		</dependency>
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-security</artifactId>
+		</dependency>
+
 	</dependencies>
 
 	<build>
