--- a/Backend/bdss/src/main/resources/application.yaml
+++ b/Backend/bdss/src/main/resources/application.yaml
@@ -7,7 +7,7 @@ spring:
     url: "jdbc:mysql://localhost:3306/BDSS"
     driverClassName: "com.mysql.cj.jdbc.Driver"
     username: root
-    password: root
+    password: duic
   jpa:
     hibernate:
       ddl-auto: update
