--- a/Backend/bdss/pom.xml
+++ b/Backend/bdss/pom.xml
@@ -75,6 +75,12 @@
 <!--			<artifactId>spring-boot-starter-security</artifactId>-->
 <!--		</dependency>-->
 
+		<dependency>
+			<groupId>com.nimbusds</groupId>
+			<artifactId>nimbus-jose-jwt</artifactId>
+			<version>9.30.1</version> <!-- Replace with the latest version if available -->
+		</dependency>
+
 	</dependencies>
 
 	<build>
