--- a/frontend/package.json
+++ b/frontend/package.json
@@ -17,6 +17,7 @@
     "react-dom": "^19.1.0",
     "react-router": "^7.6.0",
     "react-router-dom": "^7.6.1",
+    "react-scroll": "^1.9.3",
     "swiper": "^11.2.8",
     "tailwindcss": "^4.1.7"
   },
@@ -25,6 +26,7 @@
     "@types/react": "^19.1.2",
     "@types/react-dom": "^19.1.2",
     "@vitejs/plugin-react": "^4.4.1",
+    "daisyui": "^5.0.42",
     "eslint": "^9.25.0",
     "eslint-plugin-react-hooks": "^5.2.0",
     "eslint-plugin-react-refresh": "^0.4.19",
