--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,6 +10,8 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@react-oauth/google": "^0.12.2",
+    "firebase": "^11.8.1",
     "@tailwindcss/vite": "^4.1.7",
     "axios": "^1.9.0",
     "lucide-react": "^0.511.0",
