--- a/frontend/package.json
+++ b/frontend/package.json
@@ -20,6 +20,7 @@
     "nanoid": "^5.1.5",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
+    "react-icons": "^5.5.0",
     "react-router": "^7.6.0",
     "react-router-dom": "^7.6.1",
     "react-scroll": "^1.9.3",
