--- a/Backend/bdss/src/main/resources/application.yaml
+++ b/Backend/bdss/src/main/resources/application.yaml
@@ -18,7 +18,7 @@ spring:
     url: "jdbc:mysql://localhost:3306/BDSS"
     driverClassName: "com.mysql.cj.jdbc.Driver"
     username: root
-    password: duic
+    password: root
   jpa:
     hibernate:
       ddl-auto: update
