--- a/frontend/package.json
+++ b/frontend/package.json
@@ -16,6 +16,7 @@
     "axios": "^1.9.0",
     "dayjs": "^1.11.13",
     "firebase": "^11.8.1",
+    "jwt-decode": "^4.0.0",
     "lucide-react": "^0.511.0",
     "nanoid": "^5.1.5",
     "react": "^19.1.0",
