--- a/frontend/package.json
+++ b/frontend/package.json
@@ -29,6 +29,7 @@
     "react-router": "^7.6.0",
     "react-router-dom": "^7.6.1",
     "react-scroll": "^1.9.3",
+    "react-toastify": "^11.0.5",
     "swiper": "^11.2.8",
     "tailwindcss": "^4.1.7",
     "uuid": "^11.1.0"
