--- a/frontend/package.json
+++ b/frontend/package.json
@@ -32,7 +32,8 @@
     "react-toastify": "^11.0.5",
     "swiper": "^11.2.8",
     "tailwindcss": "^4.1.7",
-    "uuid": "^11.1.0"
+    "uuid": "^11.1.0",
+    "yup": "^1.6.1"
   },
   "devDependencies": {
     "@eslint/js": "^9.25.0",
