--- a/Backend/bdss/src/main/resources/application.yaml
+++ b/Backend/bdss/src/main/resources/application.yaml
@@ -39,8 +39,8 @@ spring:
   mail:
     host: smtp.gmail.com
     port: 587
-    username: ollamabakery@gmail.com #tạo biến môi trường để bảo mật
-    password: frii snaa sgsa uasx
+    username: blooddonationsystemcare@gmail.com #tạo biến môi trường để bảo mật
+    password: xmpy eklv etim amzm
     properties:
       mail:
         smtp:
