--- a/frontend/package.json
+++ b/frontend/package.json
@@ -18,12 +18,14 @@
     "@react-oauth/google": "^0.12.2",
     "@tailwindcss/vite": "^4.1.7",
     "axios": "^1.9.0",
+    "chart.js": "^4.5.0",
     "dayjs": "^1.11.13",
     "firebase": "^11.8.1",
     "jwt-decode": "^4.0.0",
     "lucide-react": "^0.511.0",
     "nanoid": "^5.1.5",
     "react": "^19.1.0",
+    "react-chartjs-2": "^5.3.0",
     "react-dom": "^19.1.0",
     "react-icons": "^5.5.0",
     "react-router": "^7.6.0",
