update lại inventory cho component

--- a/frontend/.env
+++ b/frontend/.env
@@ -8,4 +8,5 @@ VITE_FIREBASE_MESSAGING_SENDER_ID=160419323662
 VITE_FIREBASE_APP_ID=1:160419323662:web:27f9b58ad9cb9e07d2415f
 VITE_FIREBASE_MEASUREMENT_ID=G-YZW3HCPDMN
 # API
-VITE_API_URL=https://bdss-production.up.railway.app/bdss
+VITE_API_URL=http://localhost:8080/bdss
+#VITE_API_URL=https://bdss-production.up.railway.app/bdss
